<resources>
    <string name="greetings">Greetings</string>
    <string name="hello">Hello</string>
    <string name="search">Search diary…</string>
    <string name="HomePage">HomePage</string>
    <string name="title">Title</string>
    <string name="wd">Write your diary...</string>
    <string name="aboutus">About us</string>
    <string name="back">← Back</string>
    <string name="jethro">Jethro Wang</string>
    <string name="role"><![CDATA[Developer & Designer]]></string>
    <string name="roleb">Handles database integration and ensures the system works smoothly behind the scenes.</string>
    <string name="roleA">Focused on clean UI/UX and functionality to make everyday journaling more efficient.</string>
    <string name="zai">Zaimone Miranda</string>
    <string name="role2">Backend Developer</string>
    <string name="john">John Col</string>
    <string name="role3">UI Tester</string>
    <string name="roleC">Ensures usability and interface responsiveness across different Android devices.</string>
    <string name="rylie">"Rylie Buenaventura "</string>
    <string name="role4"><![CDATA[QA & Documentation]]></string>
    <string name="roleD">Responsible for quality assurance and keeping project documentation clear and organized.</string>
    <string name="welcome_signup">Let’s get you started—create your account now! </string>

    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">User Name</string>
    <string name="nav_header_email">user.email@example.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="mood_page">Your Mood Today</string>
    <string name="intro">Take a moment to write how you\'re feeling.</string>
    <string name="Mtitle">Insert Title</string>
    <string name="write">Write on Me</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="profile_page">User Profile</string>
    <string name="menu_profile">Profile</string>
</resources>
