<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutTeam">

    <LinearLayout
        android:id="@+id/about_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bright_yellow"
            android:text="@string/back"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp" />

        <!-- Jethro Wang -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/light_blue"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/jethro"

                android:contentDescription="@string/jethro"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jethro"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roleA"
                android:textSize="16sp"
                android:gravity="center" />
        </LinearLayout>

        <!-- Zaimone Miranda -->
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/light_blue"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/zai"
                android:contentDescription="@string/zai"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zai"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role2"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roleb"
                android:textSize="16sp"
                android:gravity="center" />
        </LinearLayout>

        <!-- John Col -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/col"
                android:contentDescription="@string/john"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role3"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roleC"
                android:textSize="16sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/rylie"
                android:contentDescription="@string/john"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rylie"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role4"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/roleD"
                android:textSize="16sp"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
